# weather-uk

./: README.md  setup.cfg
src/weather_uk/: __main__.py  api_requests.py  cli.py  config.py  forecasts.py  locations.py  weather_type.py
src/weather_uk/config_template/: weather-uk.cfg
tests/: test_api_requests.py  test_config.py  test_forecasts.py  test_locations.py  test_weather_type.py
tests/resources/: mock_3hourly_forecast.json  mock_forecast.json  mock_ipinfo.json  mock_sitelist.json  weather-uk.cfg
