[metadata]
name = weather-uk
version = attr: weather_uk.__version__
author = TomJGooding
description = Check UK weather forecasts from the command line
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/TomJGooding/weather-uk
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
python_requires = >=3.7
package_dir =
    = src
packages = find:
include_package_data = True
install_requires =
    click
    importlib-resources
    platformdirs
    prettytable
    requests

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    weather-uk = weather_uk.cli:main

[options.extras_require]
dev =
    black
    flake8
    isort
    mypy
    pytest
    pytest-cov
    responses
